--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">
+      <img src="/images/logo-text-188x56.png" alt="{{ site.title }}" title="{{ site.title }}">
+    </a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -14,6 +16,7 @@
       </a>
 
       <div class="trigger">
+        <a class="page-link" href="{{ site.baseurl }}">Home</a>
         {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
