--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
 
       <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}">Home</a>
+        <a class="page-link" href="{{ site.baseurl }}/slides" target="_new">Slides</a>
         {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
