--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">
-      <img src="/images/logo-text-188x56.png" alt="{{ site.title }}" title="{{ site.title }}">
+      <img src="{{ site.baseurl}}/images/logo-text-188x56.png" alt="{{ site.title }}" title="{{ site.title }}">
     </a>
 
     <nav class="site-nav">
