--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -80,12 +80,12 @@
               </li>
               <li class="text-center">
                 <p class="navbar-btn">
-                  <a href="/attend.html" class="btn btn-primary cf-btn">Attend</a>
+                  <a href="{{ BASE_PATH }}/attend.html" class="btn btn-primary cf-btn">Attend</a>
                 </p>
               </li>
               <li class="text-center">
                 <p class="navbar-btn">
-                  <a href="/about.html" class="btn btn-primary cf-btn">About</a>
+                  <a href="{{ BASE_PATH }}/about.html" class="btn btn-primary cf-btn">About</a>
                 </p>
               </li>
             </ul>
