--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -111,7 +111,7 @@
           <a href="#"><i class="fa fa-3x fa-github"></i> <span>Repo (github)</span></a>
         </li>
       	<li class="nav-item">
-          <a href="#"><i class="fa fa-3x fa-files-o"></i> <span>Posts</span>/a>
+          <a href="#"><i class="fa fa-3x fa-files-o"></i> <span>Posts</span></a>
         </li>
       </ul>
 
