--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -75,7 +75,7 @@
             <ul class="nav navbar-nav">
               <li class="text-center">
                 <p class="navbar-btn">
-                  <a class="btn btn-primary cf-btn">Organise</a>
+                  <a href="{{ BASE_PATH }}/organise.html" class="btn btn-primary cf-btn">Organise</a>
                 </p>
               </li>
               <li class="text-center">
@@ -97,6 +97,9 @@
       <ul class="navigation">
       	<li>
           <h3>Menu</h3>
+        </li>
+        <li class="nav-item">
+          <a href="{{ BASE_PATH }}/"><i class="fa fa-3x fa-home"></i> <span>Home</span></a>
         </li>
       	<li class="nav-item">
           <a href="#"><i class="fa fa-3x fa-code"></i> <span>Code (freelance sites)</span></a>
