--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -102,7 +102,7 @@
           <a href="{{ BASE_PATH }}/"><i class="fa fa-3x fa-home"></i> <span>Home</span></a>
         </li>
       	<li class="nav-item">
-          <a href="#"><i class="fa fa-3x fa-code"></i> <span>Code (freelance sites)</span></a>
+          <a href="{{ BASE_PATH }}/code.html"><i class="fa fa-3x fa-code"></i> <span>Code (freelance sites)</span></a>
         </li>
       	<li class="nav-item">
           <a href="{{ ASSET_PATH }}/slides/index.html"><i class="fa fa-3x fa-university"></i> <span>Learn (slides)</span></a>
