--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -107,15 +107,19 @@
       	<li class="nav-item">
           <a href="{{ BASE_PATH }}/learn.html"><i class="fa fa-3x fa-university"></i> <span>Learn (slides)</span></a>
         </li>
+        <!--
       	<li class="nav-item">
           <a href="#"><i class="fa fa-3x fa-calendar"></i> <span>Plan (agile)</span></a>
         </li>
+        //-->
       	<li class="nav-item">
-          <a href="#"><i class="fa fa-3x fa-github"></i> <span>Repo (github)</span></a>
+          <a href="https://github.com/daithi-coombes/coder-forge"><i class="fa fa-3x fa-github"></i> <span>Repo (github)</span></a>
         </li>
+        <!--
       	<li class="nav-item">
           <a href="#"><i class="fa fa-3x fa-files-o"></i> <span>Posts</span></a>
         </li>
+        //-->
       </ul>
 
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
