--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -115,11 +115,9 @@
       	<li class="nav-item">
           <a href="https://github.com/daithi-coombes/coder-forge"><i class="fa fa-3x fa-github"></i> <span>Repo (github)</span></a>
         </li>
-        <!--
       	<li class="nav-item">
-          <a href="#"><i class="fa fa-3x fa-files-o"></i> <span>Posts</span></a>
+          <a href="{{ BASE_PATH }}/posts.html"><i class="fa fa-3x fa-files-o"></i> <span>Posts</span></a>
         </li>
-        //-->
       </ul>
 
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
