--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -107,6 +107,9 @@
       	<li class="nav-item">
           <a href="{{ BASE_PATH }}/learn.html"><i class="fa fa-3x fa-university"></i> <span>Learn (slides)</span></a>
         </li>
+        <li class="nav-item">
+          <a href="{{ BASE_PATH }}/tools.html"><i class="fa fa-3x fa-terminal"></i> <span>Tools &amp; Resources</span></a>
+        </li>
         <!--
       	<li class="nav-item">
           <a href="#"><i class="fa fa-3x fa-calendar"></i> <span>Plan (agile)</span></a>
@@ -145,7 +148,7 @@
 
     <script src="{{ ASSET_PATH }}/bower_components/jquery/dist/jquery.js"></script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="{{ ASSET_PATH }}/js/global.js"></script>
     {% if page.js %}
       {% for js_file in page.js %}
       <script src='{{ ASSET_PATH }}/{{ js_file }}' type="text/javascript"></script>
