--- a/_includes/themes/coder-forge/default.html
+++ b/_includes/themes/coder-forge/default.html
@@ -66,7 +66,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ HOME_PATH }}">
-              <img src="{{ ASSET_PATH }}/images/logo-text-188x56.png" alt="Coder Forge logo" text="coder forge">
+              <img src="{{ ASSET_PATH }}/images/logo-text-188x56.png" alt="Coder Forge logo">
             </a>
           </div>
 
