--- a/assets/themes/coder-forge/css/tools.css
+++ b/assets/themes/coder-forge/css/tools.css
@@ -1,12 +1,27 @@
 div#cards{
-  height: 900px;
+  margin-top: 20px;
+  -webkit-column-count:3;
+  -moz-column-count:3;
+  column-count:3;
+
+  max-height: 900px;
 }
 div.cards .mix{
+  /**
   display: none;
   margin: 10px;
   padding: 5px;
   width: 300px;
   min-height: 140px;
+  */
+  display: none;
+  margin: 0 0 5%;
+  padding: 4%;
   border: 1px solid;
   border-radius: 5px;
+  text-align: left;
+
+  -webkit-backface-visibility: hidden;
+
+  -webkit-transform-origin: 50% 0;
 }
